--- a/package.json
+++ b/package.json
@@ -1,11 +1,40 @@
+// {
+//   "name": "blog",
+//   "version": "1.0.0",
+//   "description": "",
+//   "main": "index.js",
+//   "homepage": "https://<your-github-username>.github.io/Bloggify",
+//   "scripts": {
+//   "predeploy": "npm run build",
+//   "deploy": "gh-pages -d build"
+// },
+
+//   "author": "",
+//   "license": "ISC",
+//   "dependencies": {
+//     "cookie-parser": "^1.4.7",
+//     "ejs": "^3.1.10",
+//     "express": "^4.21.1",
+//     "font-awesome": "^4.7.0",
+//     "jsonwebtoken": "^9.0.2",
+//     "mongoose": "^8.7.2",
+//     "multer": "^1.4.5-lts.1"
+//   },
+//   "devDependencies": {
+//     "gh-pages": "^6.2.0",
+//     "nodemon": "^3.1.7"
+//   }
+// }
+
 {
   "name": "blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://<your-github-username>.github.io/Bloggify",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +48,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "nodemon": "^3.1.7"
   }
 }
